--- a/css/e6.css
+++ b/css/e6.css
@@ -1,7 +1,7 @@
-@font-face {
-    font-family: 'Arial Black';
-    src: url("../font/ArialBlack.ttf"), url("../font/ArialBlack.eot");
-}
+/*@font-face {*/
+    /*font-family: 'Arial Black';*/
+    /*src: url("../font/ArialBlack.ttf"), url("../font/ArialBlack.eot");*/
+/*}*/
 
 html,
 body {
